force-app/main/default/objects/Stagging__c/Stagging__c.object-meta.xml
<CustomObject>
    <label>Stagging</label>
    <nameField>
        <label>Stagging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stagging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>