force-app/main/default/objects/Stagging__c/fields/Chunk__c.field-meta.xml
<CustomField>
    <fullName>Chunk__c</fullName>
    <label>Chunk</label>
    <length>18</length>
    <type>Text</type>
</CustomField>