force-app/main/default/objects/Stagging__c/fields/Upload_Failed__c.field-meta.xml
<CustomField>
    <fullName>Upload_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload Failed</label>
    <type>Checkbox</type>
</CustomField>