force-app/main/default/objects/Stagging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>From_sObject__c</columns>
    <columns>Content_Document_Id__c</columns>
    <columns>Linked_Entity_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>